--- a/docs/religion/gods/bostet.mdx
+++ b/docs/religion/gods/bostet.mdx
@@ -13,6 +13,36 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 Healthcare, Childcare, Funerary Services
 
+## Bostet
+
+- **You can't pour from an empty cup.** Caring for yourself is a prerequisite to
+  caring for others.
+- **Care is a circle, not a one-way street.** The caregiver of today is the one
+  who needs care tomorrow. It is a shared role, not a fixed identity.
+- **You don't have to understand someone's pain to believe them.** Empathy is
+  not about having the same experience, but about offering your presence and
+  trust without demanding proof.
+- **The chosen family and the biological family are equally valid.** The bonds
+  forged by love, affinity, and mutual support are the true measure of family.
+- **Grief is not a problem to be solved.** It is a landscape to be journeyed
+  through. The best you can do is walk alongside someone, not try to pull them
+  out of it.
+- **Grief is a Communal Process** No one should be expected to grieve alone.
+  Grief is a burden the entire community helps to carry, and a space for it
+  should be a normal part of life.
+- **Care is a Skill, Not Just a Feeling.** Empathy is the starting point, but
+  true caregiving is a practiced, learned skill that requires patience,
+  knowledge, and effort. It is a form of essential labor.
+- **Children are raised by the community, not just by their parents.** Every
+  adult has a role to play in the life of every child.
+- **Care for the caregiver.** The community is explicitly responsible for
+  preventing burnout among its healers and helpers. Forcing a caregiver to work
+  to exhaustion is a serious communal failure.
+- **To remember the dead is to keep them shining brightly in the weave.**" The
+  act of telling stories about those who have passed is not just a comfort, but
+  a vital practice that keeps their spirit and wisdom alive and accessible to
+  the community.
+
 ## Appearance
 
 Bostet has no single form as they are made of pure empathy. Instead, Bostet
