--- a/docs/religion/gods/dimîtu.mdx
+++ b/docs/religion/gods/dimîtu.mdx
@@ -13,6 +13,32 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 Environment, Land Usage, Agriculture, Animal Husbandry
 
+## Beliefs
+
+- **The health of the wolf is the health of the deer.** Predator and prey are
+  partners in the same great dance. The entire cycle, including its violent and
+  uncomfortable parts, is necessary for the health of the whole.
+- **Leave a place better than you found it.** This applies to a campsite, a
+  community, or the world itself.  Your presence should not diminish the life of
+  the space you are in.
+- **Death is the engine of life.** Composting, decay, and the predator's hunt
+  are not evil; they are essential, creative, and sacred parts of the cycle.
+- **Listen to what the land tells you.** The types of plants that grow, the flow
+  of water, and the behavior of animals are all forms of knowledge. To impose a
+  plan against the will of the land is an act of foolishness.
+- **"Property" is a fiction.** You cannot own a piece of the ecosystem any more
+  than you can own a person's life. We are momentary stewards of a system that
+  will outlive us, never masters over it.
+- **Human spaces are also ecosystems.** A city or a commune is not separate from
+  nature. It should be treated as an ecosystem, with its own inputs, outputs,
+  predator-prey dynamics, and need for biodiversity.
+- **There is wisdom in weeds** The plants that grow in the cracks, the unwanted
+  survivors, have the most to teach about resilience, adaptation, and survival
+  in hostile conditions.
+- **You are what you waste.** The waste a community produces is the truest
+  measure of its relationship with the cycle of life and decay. A healthy
+  community, like a healthy forest, has no "waste."
+
 ## Appearance
 
 To see them is to see an avatar of the land itself, a localized, intensified
