--- a/docs/religion/gods/hûlicîn.mdx
+++ b/docs/religion/gods/hûlicîn.mdx
@@ -13,6 +13,26 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 Chaos, Chance, Wandering, Spontaneity, Serendipity
 
+## Beliefs
+
+- **A plan is a good story you tell yourself before the journey.** Do not be
+  afraid to abandon it when the world tells you a more interesting one.
+- **Not all who wander are lost, but getting lost is sometimes the point.** The
+  most important discoveries are made when you are not looking for them.
+- **Embrace the glitch.** The mistake, the typo, the random mutation—these are
+  not errors, but the raw material of creativity and change.
+- **Luck is a skill.** Luck is not just a random force. One can cultivate it by
+  being open to opportunity, by talking to strangers, and by being willing to
+  abandon the plan at a moment's notice.
+- **Chaos is the raw material of creation.** Order does not create; it only
+  maintains. True innovation and change are born when the old patterns are
+  disrupted.
+- **Never walk the same path twice if you can help it.** A minor belief that
+  encourages small, daily acts of chaos (taking a different route to the
+  workshop, trying a new food, talking to a stranger) to keep life interesting.
+  A little bit of harmless chaos can prevent the stagnation that allows for
+  tyranny to take root.
+
 ## Appearance
 
 Hûlicîn, the Wanderer, is a god of the road, the glitch, and the happy accident.
