--- a/docs/religion/gods/kulîôbî.mdx
+++ b/docs/religion/gods/kulîôbî.mdx
@@ -13,6 +13,32 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 Media, Competitions, Recreation/Leisure, Festivals
 
+## Beliefs
+
+- **If your revolution has no dancing, it's a revolution I don't want.** Joy is
+  not a distraction from the struggle; it is the reason for it.
+- **An audience is just a group of performers who are currently resting.** The
+  distinction between creator and consumer is a false one. Everyone has a story
+  to tell or a song to sing. Art is the community's way of talking
+  to itself.
+- **Competition is for growth, not for dominance.** A good game makes everyone
+  play better. The goal is the shared thrill of the contest, not the humiliation
+  of the loser.
+- **Celebrate "failures" as much as successes.** A spectacular, ambitious
+  failure is often more interesting and instructive than a safe, boring success.
+- **Play is a form of problem-solving.** Games, sports, and aimless play are not
+  just for fun; they are how we learn the dynamics of systems, test boundaries,
+  and innovate in a low-stakes environment.
+- **Humor is a divine weapon.** Laughter, satire, and ridicule are among the
+  most effective tools for dismantling the solemnity and self-importance of
+  tyrants.
+- **A good story belongs to everyone.** Once a story is told, it is meant to be
+  shared, re-told, and changed by the community. There is no final, "correct"
+  version.
+- **Beauty is a need, not a luxury.** The creation of "useless" art, music, and
+  decoration is considered as important to a community's health as providing
+  food and shelter.
+
 ## Appearance
 
 Kulîôbî never simply arrives; they *erupt*. Their presence is a sudden,
