--- a/docs/religion/gods/suluswutî.mdx
+++ b/docs/religion/gods/suluswutî.mdx
@@ -13,6 +13,28 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 Education, Training, Research, Journalism
 
+## Beliefs
+
+- **An expert is a beginner who has asked more questions.** Expertise is not a
+  title to be defended, but a process to be shared. The best way to learn is to
+  teach.
+- **A library is more valuable than any temple.** The preservation and free
+  sharing of knowledge is a sacred duty. Censorship is the ultimate act of
+  dogmatism.
+- **Mistakes are data.** Being wrong is not a source of shame, but a valuable
+  opportunity to learn something new. To never be wrong is to never risk a truly
+  interesting question.
+- **Challenge your own conclusions more fiercely than you challenge others'.**
+  Intellectual honesty requires constant self-examination.
+- **Teaching is an act of questioning.** The goal of an educator is not to fill
+  a mind with facts, but to give it the tools and the courage to question the
+  world.
+- **Documentation is a revolutionary act.** To record the stories of the
+  marginalized, to document the process of a struggle, or to simply keep clear
+  minutes of a meeting is to create a shield against lies and forgetfulness.
+- **A single source is a single point of failure.** Truth is found by weaving
+  together many different perspectives, especially those you disagree with.
+
 ## Appearance
 
 Suluswutî is never seen clearly. When one thinks they have become aware of their
