--- a/docs/religion/gods/tîêngûun.mdx
+++ b/docs/religion/gods/tîêngûun.mdx
@@ -13,6 +13,35 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 Planning, Budgeting, Investment, Financials
 
+## Beliefs
+
+- **The best plan is a living document, not a stone tablet.** A community's
+  plans and budgets must be flexible and constantly revisited, as needs and
+  conditions change. To treat a plan as sacred and unchangeable is a form of
+  tyranny.
+- **A healthy community has many arguments.** Disagreement is not a sign of
+  failure, but a sign of engagement. Silence and the absence of dissent are the
+  true warnings of a society in decline. A meeting that ends without a decision
+  is more successful than a decision made without consensus.
+- **"Fairness" is not about everyone getting the same thing.** Fairness is about
+  everyone getting what they need to thrive. True equity requires acknowledging
+  different needs and circumstances.
+- **Transparency is a form of trust.** All communal ledgers, resource lists, and
+  meeting notes should be open, not to police each other, but to foster a
+  culture of shared responsibility and knowledge.
+- **Always plan to meet and revisit decisions after consensus**: The true
+  measure of a decision is how it is implemented and how it feels the next day.
+  A good consensus includes a plan for checking in and making adjustments.
+- **A healthy community has "soft edges."** It should be easy for newcomers to
+  join and for members to leave without penalty, ensuring all association is
+  voluntary.
+- **Facilitation is a temporary burden, not a permanent role.** To prevent the
+  rise of soft hierarchies, all facilitator duties should be rotated regularly
+  among all willing and capable members of the community.
+- **The health of the weave is measured by its quietest thread.** A community is
+  only as strong as its ability to hear and value the contributions of its most
+  marginalized or shy members.
+
 ## Appearance
 
 Tîengûun is a deity of process, and their manifestation is a subtle, rising tide
