--- a/docs/religion/gods/unonsî.mdx
+++ b/docs/religion/gods/unonsî.mdx
@@ -13,6 +13,36 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 Power, Communications, Technology, Transportation
 
+## Beliefs
+
+- **To use a tool without understanding how it works is to be a slave to it.**
+  Every person should be encouraged to learn how to maintain, repair, and modify
+  the tools they rely on.
+- **The most elegant solution is often the simplest.** Complexity for its own
+  sake is a Shard of the Law. A device that is easy to repair is superior to a
+  more efficient one that is a "black box."
+- **Technology should connect, not isolate.** Any new tool should be judged by
+  its ability to foster collaboration and communication, rather than creating
+  dependence on a centralized service. Sharing a blueprint is as important as
+  building the machine.
+- **"Obsolete" is a lie told to sell new things.** An old tool that still works
+  perfectly is a respected elder, not a piece of junk.
+- **Systems should be designed to fail in predictable, non-catastrophic ways.**
+  A good machine is one that breaks down simply and can be easily fixed by its
+  user.
+- **Every user is a potential designer.** The person using a tool knows its
+  flaws and potentials best. Feedback, modification ("hacking"), and user-led
+  innovation are essential parts of technological evolution.
+- **A tool holds the spirit of its maker.** To use a tool is to enter into a
+  dialogue with the person who created it. To share a tool is to share a part of
+  yourself.
+- **An open patent is an act of solidarity.** To create a new invention and keep
+  its design secret for personal gain is a profound misalignment from Unonsî's
+  true form. All knowledge should be shared freely.
+- **Redundancy is resilience.** Always build decentralized, robust systems. A
+  single point of failure—whether in a power grid or a communication network—is
+  an invitation for a Shard to take control.
+
 ## Appearance
 
 Unonsî is never still. To see them is to witness a being in a perpetual state of
