--- a/docs/religion/gods/wicnû.mdx
+++ b/docs/religion/gods/wicnû.mdx
@@ -13,6 +13,24 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 Conflict resolution, transformative justice, reconciliation, ethics
 
+## Beliefs
+
+- **Justice is about future safety, not past punishment.** The primary goal of
+  any restorative process is to ensure the harm will not happen again.
+- **Listen to understand, not to rebut.** True mediation requires silencing your
+  own arguments and truly hearing the need and pain behind another's words.
+- **Accountability must be taken, it cannot be forced.** A person can be
+  restrained from causing more harm, but their participation in a restorative
+  process must be voluntary to be meaningful.
+- **"Sorry" is a starting word, not an ending one.** An apology without a
+  commitment to change and repair is just a noise.
+- **Some tears in the weave cannot be perfectly mended.** Not all harm can be
+  undone. Sometimes, the goal is not to return to how things were, but to create
+  a new, honest, and resilient pattern that acknowledges the scar.
+- **You can reject an action without rejecting the person.** Harmful acts must
+  be stopped, but the person who committed them remains a part of the community,
+  with a path to restoration.
+
 ## Appearance
 
 Wicnû's presence is quiet, intensely focused, and arrives only when a community
