--- a/docs/religion/gods/xôcibîlî.mdx
+++ b/docs/religion/gods/xôcibîlî.mdx
@@ -13,6 +13,28 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 Fashion, Therapy, Body Modification, Plastic Surgery
 
+## Beliefs
+
+- **You are not the same person you were yesterday, and that is a good thing.**
+  Identity is a process, not a fixed point. Allow yourself to change, grow, and
+  redefine yourself.
+- **Solitude is as necessary as community.** You cannot bring a whole self to
+  the circle if you have not spent time exploring your own inner world. A
+  healthy community protects the right of its members to have time and space to
+  themselves, recognizing that introspection and rest benefit the whole.
+- **Your inner world is the one place you are truly sovereign.** Defend it
+  fiercely. Do not let others dictate your feelings or your thoughts. Your
+  identity is a story that you are both the author and the main character of.
+- **Compare your journey only to your own past, not to another's present.** Envy
+  is the fog that obscures your own path.
+- **Be honest about what your story is and what you are facing.** It is not only
+  acceptable, but honorable to clearly and honestly state your own needs and
+  boundaries. This is preferable to dishonest "selflessness" that breeds
+  resentment.
+- **Your reflection is not your own.** The self you see in the mirror is shaped
+  by the community that surrounds you. Therefore, building a better self
+  requires building a better community, and vice-versa.
+
 ## Appearance
 
 Xôcibîlî is the most subtle and personal of the gods, and they are never
