--- a/docs/religion/gods/îfêstôs.mdx
+++ b/docs/religion/gods/îfêstôs.mdx
@@ -13,6 +13,22 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 Manufacturing, Materials, Construction
 
+## Beliefs
+
+- **The scar on a hand tells a better story than the jewel on a finger.** The
+  marks of honest labor are signs of a life of creation and purpose.
+- **The scar on a well-used tool is a mark of honor.** Signs of wear are a
+  history of productive usage and should be celebrated, not hidden.
+- **Measure twice, cut once.** Haste and carelessness disrespect the materials.
+  The work is worthy of patience and focus.
+- **Build things to last, not to be replaced.** Craftsmanship is a form of
+  rebellion against a system of waste and consumption.
+- **There is no such thing as "unskilled" labor.** All work requires knowledge,
+  focus, and dignity, whether it is digging a ditch or carving a sculpture.
+- **Materials have a voice.** A skilled worker listens to the wood, the stone,
+  or the steel. The material itself will often suggest the best way to be
+  shaped, and to force it against its nature is to create weakness.
+
 ## Appearance
 
 Îfêstôs's form is a testament to the materials of the world, shaped by endless,
