Capture renegade quotation mark

--- a/docs/religion/gods/bostet.mdx
+++ b/docs/religion/gods/bostet.mdx
@@ -38,7 +38,7 @@ Healthcare, Childcare, Funerary Services
 - **Care for the caregiver.** The community is explicitly responsible for
   preventing burnout among its healers and helpers. Forcing a caregiver to work
   to exhaustion is a serious communal failure.
-- **To remember the dead is to keep them shining brightly in the weave.**" The
+- **To remember the dead is to keep them shining brightly in the weave.** The
   act of telling stories about those who have passed is not just a comfort, but
   a vital practice that keeps their spirit and wisdom alive and accessible to
   the community.
