Add missing noun prep details

--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -30,12 +30,12 @@ preposition. If a preposition is immediately after a
 The <HisyeoWord is='û'/> particle precedes this noun phrase. If this is the
 first noun phrase of a sentence, the particle can be elided (skipped).
 
-During causative sentences, a NP with this role represents the *causer*. During
-non-causative sentences, a NP with this role will be the **agent** or
-**experiencer** of the action or state. Additionally during non-causative
-sentences, the marked noun phrase is making the choice to commit the act or
-experience the state of the predicate of their own free will. In linguistics
-this case is known as the **agentive** case.
+During causative sentences, a noun phrase with this role represents the
+*causer*. During non-causative sentences, a noun phrase with this role will be
+the **agent** or **experiencer** of the action or state. In linguistics this
+case is known as the **agentive** case. Additionally, during non-causative
+sentences, the marked noun phrase is considered to be making the choice to
+commit the act or experience the state of the predicate of their own free will. 
 
 When used with the negatitive particle <HisyeoWord is='yôk'/>, it means that the
 marked noun phrase is either excluded from being the subject of the committed
@@ -46,14 +46,14 @@ than the marked noun phrase.
 
 The <HisyeoWord is='ôlê'/> particle precedes this noun phrase.
 
-During causative sentences, a NP with this role will represent the *causee*.
-During non-causative sentences, a NP with this role will be the agent or
-experiencer of the action. Additionally during non-causative sentences, the
-marked noun phrase is **not** making the choice to commit the act of their own
-free will. Either they are bound/forced to do so or they do not have the
-wherewithal to make a conscious choice on the matter and are acting out of some
-basic instinst. In linguistics, this case is sometimes referred to as the
-**causal-agentive** case.
+During causative sentences, a noun phrase with this role will represent the
+*causee*. During non-causative sentences, a noun phrase with this role can be
+used to represent the agent or experiencer of the action. Unlike the previous
+particle, the marked noun phrase is **not** making the choice to commit the act
+of their own free will. Either they are bound/forced to do so or they do not
+have the wherewithal to make a conscious choice on the matter and are acting out
+of some basic instinst. In linguistics, this case is sometimes referred to as
+the **causal-agentive** case.
 
 When used with the negatitive particle <HisyeoWord is='yôk'/> it has the
 equivalent semantic interpretation as the voluntary subject particle <HisyeoWord is='û'/>.
@@ -72,16 +72,17 @@ preposition particle to introduce their direct object).
 
 :::caution Base Verbs Without This Particle
 
-You can provide a verb prepositionally without also providing a direct object
-noun phrase. Simply start another preposition, use a connector to create a
-compound sentence, use a comma to end a clause or use a period to end a sentence
-(the only thing you can't do is immediately follow a verb with another verb
-because it will be perceived as being the direct object of the preceding verb).
-Not using this noun phrase slot can have an impact on how base verb sentences
-are interpreted. Without providing a direct object, a base verb is interpreted
-as being *intransitive* or in an unthematic and generic manner (since no theme
-is being provided). That being said, sometimes it's easiest to just think of an
-implicit <HisyeoWord is='ni'/> existing in the direct object slot.
+Unlike the other preposition particles, you can provide a verb without also
+providing a direct object noun phrase. Simply start another preposition, use a
+connector to create a compound sentence, use a comma to end a clause or use a
+period to end a sentence (the only thing you can't do is immediately follow a
+verb directly with another verb because it will always be perceived as being the
+direct object of the preceding verb). Not using this noun phrase slot can have
+an impact on how base verb sentences are interpreted. Without providing a direct
+object, a base verb is interpreted as being *intransitive* or in an unthematic
+and generic manner (since no theme is being provided). That being said,
+sometimes it's easiest to just think of an implicit <HisyeoWord is='ni'/>
+existing in the direct object slot.
 
 :::
 
@@ -104,19 +105,23 @@ The <HisyeoWord is='bi'/> particle precedes this noun phrase.
 
 This role is used for noun phrases that represent the manner or material of the
 predicate. In English, this is represented by the use of words with the "-ly"
-suffix (adverbs) or some senses of the words "by" and "with". In linguistics, this might be seen as a kind of adverbial case but the word "adverbial" is ill-fitting to the grammar of Hîsyêô so the term **methodological** case is being used instead.
+suffix (adverbs) or some senses of the words "by" and "with". In linguistics,
+this might be seen as a kind of adverbial case but the word "adverbial" is
+ill-fitting to the grammar of Hîsyêô so the term **methodological** case is
+being used instead.
 
 :::info Thematic Relations
 
-This preposition and the remaining described here can be used with intransitive
-and transitive verb predicates and are only needed in certain circumstances when
-extra thematic information is useful to describing the predicate in a new way.
-These prepositions are known as **true thematic relations**. Subjects
-(<HisyeoWord is='û'/> or <HisyeoWord is='ôlê'/>) are honorary members of the
-thematic relation club since they are traditionally referred to as
-**morphosyntactic arguments**. They are included in the same class of word as
-the true thematic relations to simplify the grammatical system. This system is
-what allows the language to have **free constituent ordering**.
+This preposition and the remaining described here can be used with sentences
+that contain intransitive and transitive verbs and are only needed in certain
+circumstances when extra thematic information is useful to describing the
+predicate in a new way. These prepositions are known as **true thematic
+relations**. The prepositions above, the subjects (<HisyeoWord is='û'/> or
+<HisyeoWord is='ôlê'/>) and direct objects are honorary members of the thematic
+relation club since they are traditionally referred to as **morphosyntactic
+arguments**. They are included in the same class of word as the true thematic
+relations to simplify the grammatical system. This system is what allows the
+language to have **free constituent ordering**.
 
 :::
 
@@ -428,7 +433,7 @@ some of the senses of the words "regarding", "given", "as for", and "when".
 
 Also, when you would like to utilize an adjective complement to complete the
 meaning of a subject complete (<HisyeoWord is='li'/>), you would place the
-complement in a <HisyeoWord is='hôn'/> NP.
+complement in a <HisyeoWord is='hôn'/> preposition.
 
 <HisyeoTabs>
   <p>noyo li xowosê hôn fos nîmû kôto sî ulyô.&emsp;<em>"I am happy that you said that"</em></p>
@@ -522,7 +527,7 @@ it might be useful to see the semantic relationship of four of the thematic
 roles:
 
 - The **source/origin** role represents a *true* source/origin, sometimes
-  contextually distant/ from the action or state.
+  contextually distant from the action or state.
 - The **location/time** role represents the source/origin of just the act or
   state described in the sentence.
 - The **destination/recipient** role represents a true destination/recipient,
@@ -573,18 +578,61 @@ marked noun phrase is either excluded from being the intermediary entity of the
 committed act of the predicate or that the act itself was committed but with an
 intermediary that is something other than the marked noun phrase.
 
+### Antecedent
+
+The <HisyeoWord is='ilik'/> particle precedes this noun phrase.
+
+This role is used for a noun phrase that represents something that the action or
+state of the predicate is *preceded* by, whether in time or space. In English,
+this represents some of the senses of the words "before", "prior to", or "in
+front of". In linguistics, this is referred to as the **antessive** case.
+
+<HisyeoTabs>
+    <p>noyo fôlun fos ôfo li mûlû ilik lono dûsul.&emsp;<em>I want this done before Monday.</em></p>
+    <p>nîo li sî totsi ilik noyo&emsp;<em>He stood before me.</em></p>
+    <p>nûs sityo ilik môtô onô til fos li êo tût yoûtî ôlê cizi nûs.&emsp;<em>We sat before the fire to warm ourselves.</em></p>
+    <p>zîwit mûlû nîmû ilik nîmû.&emsp;<em>Your whole life is before you.</em></p>
+</HisyeoTabs>
+
+When used with the negatitive particle <HisyeoWord is='yôk'/>, it means that the
+marked noun phrase is either excluded from being the intermediary entity of the
+committed act of the predicate or that the act itself was committed but with an
+intermediary that is something other than the marked noun phrase.
+
+### Succedent
+
+The <HisyeoWord is='cihôû'/> particle precedes this noun phrase.
+
+This role is used for a noun phrase that represents something that the action or
+state of the predicate is *followed* by, whether in time or space. In English,
+this represents some of the senses of the words "after", "post", or "behind". In
+linguistics, this might be considered a kind of temporal or terminative case or
+perhaps most likely the **postessive** case.
+
+<HisyeoTabs>
+    <p>noyo fiyûxît nîmû til xe bôklôn bi dîzel cihôû foût fêlcîn nîmû.&emsp;<em>I'm not putting you in charge again after your last mistake.</em></p>
+    <p>cihôû fos nîo uskîfo sûn îlê kûlûnun û nîo kôs fos eswen dûî umo li sî tônkô.&emsp;<em>After he escaped from prison, he had two additional victims.</em></p>
+    <p>nûs cînlî yoûtî îskô cihôû kelo onô.&emsp;<em>We had a few beers after the game.</em></p>
+    <p>noyo mût nîo kôto sî xe li êo bundu ôlê zinkon onô cihôû nîo.&emsp;<em>I told her to shut the door after her.</em></p>
+</HisyeoTabs>
+
+When used with the negatitive particle <HisyeoWord is='yôk'/>, it means that the
+marked noun phrase is either excluded from being the intermediary entity of the
+committed act of the predicate or that the act itself was committed but with an
+intermediary that is something other than the marked noun phrase.
+
 ### Similative
 
 The <HisyeoWord is='misli'/> particle precedes this noun phrase.
 
-This role is used for a NP that represents something that the action or state of
-the predicate resembles or is a likeness of. It can also be used to introduce a
-[simile](https://en.wikipedia.org/wiki/Simile). In English, this represents some
-of the senses of the words "like" and "as". When used with a subordinate clause,
-it can also represent the English phrase "as if". In linguistics, this might be
-thought of as a kind of essive case. However, there is some concern that this
-case term accurately reflects the functionality in Hîsyêô. So, the term
-**similative** case wwas selected instead.
+This role is used for a noun phrase that represents something that the action or
+state of the predicate resembles or is a likeness of. It can also be used to
+introduce a [simile](https://en.wikipedia.org/wiki/Simile). In English, this
+represents some of the senses of the words "like" and "as". When used with a
+subordinate clause, it can also represent the English phrase "as if". In
+linguistics, this might be thought of as a kind of essive case. However, there
+is some concern that this case term accurately reflects the functionality in
+Hîsyêô. So, the term **similative** case is used instead.
 
 <HisyeoTabs>
   <p>xoînbo dêko û loi misli siskin loi.&emsp;<em>"He looks like his brother."</em></p>
