small determiner tweaks

--- a/docs/language/word_types/determiners.mdx
+++ b/docs/language/word_types/determiners.mdx
@@ -108,12 +108,9 @@ cardinal number).
   <p>nûs buswen niswî dus tîû êfun til xe bîek ni sûît ôfo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
 </HisyeoTabs>
 
-Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
-indefinite article. Like the English article "a" or "an".
-
 ### Ordinal
 
-Place a numeral word after the nucleus (before, in the midst, or after other
+Place a numeral word *after* the nucleus (before, in the midst, or after other
 modifiers) and it will represent a relative position of an item in a sequence
 (an ordinal number).
 
@@ -141,7 +138,7 @@ represent the number of times something is to be multiplied.
 
 ### Adverbial
 
-Place a numeral word after the manner/material thematic role marker (<HisyeoWord is='ônî'/>) and
+Place a numeral word after the manner/material thematic role marker (<HisyeoWord is='bi'/>) and
 you get adverbial numerals.
 
 <HisyeoTabs>
@@ -153,7 +150,7 @@ you get adverbial numerals.
 
 You can make distributive numerals using <HisyeoWord is='xokôn'/>. First, to
 indicate that a predicate is occurring multiple times with the specified
-details, you would tack on a <HisyeoWord is='xokôn'/> at the end of a noun
+details, you would tack on a <HisyeoWord is='xokôn'/> at the *end* of a noun
 phrase. Here's a non-distributive action and contrasting distributive one:
 
 <HisyeoTabs>
@@ -171,6 +168,9 @@ noun-phrase. You prefix a quantity phrase with <HisyeoWord is='xokôn'/>.
 </HisyeoTabs>
 
 ### Fractional
+
+You can make fractional numerals using <HisyeoWord is='fun'/>. Place the
+numerator before the particle and the denominator after.
 
 <HisyeoTabs>
     <p>noyo ke dôstoc niswî fun niswî dus tîû îcwon noyo.&emsp;<em>I will receive three thirty-fifths of my inheritance.</em></p>
