Fix up modifiers page a bit and improve modifier details on nouns page

--- a/docs/language/word_types/modifiers.mdx
+++ b/docs/language/word_types/modifiers.mdx
@@ -11,7 +11,8 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip';
 
 # Modifiers
 
-A type of word that describes a verb or noun.
+A type of word that describes a predicate or a noun phrase. Often called
+adjectives or adverbs.
 
 ## Prepositions
 
@@ -50,7 +51,8 @@ Verbs cannot be preceded by a collapsing head particle directly. This is because
 the collapsing head particle does not change the semantics of that syntactic
 position. It simply closes the prior elements as a new nucleus and then the
 syntactic context of the following word is as a modifier of that newly collapsed
-nucleus.
+nucleus. Since verbs cannot act directly as dependent modifiers to a nucleus,
+they cannot exist directly after this particle.
 
 If you need to describe the newly formed nucleus with a verb, you must use one
 of particles that converts a verb to a noun or modifier derivation.
@@ -92,8 +94,8 @@ You can modify a preceding verb or noun phrase by using one of the relative
 clause particles:
 
 <HisyeoTabs>
-    <p>xe - <em>Use this one when the subject is shared from the outer sentence</em></p>
-    <p>fos - <em>Use this one when the subject is changed from the outer sentence</em></p>
+    <p>xe - <em>Use this one when the subject is **shared** from the outer sentence</em></p>
+    <p>fos - <em>Use this one when the subject is **changed** from the outer sentence</em></p>
 </HisyeoTabs>
 
 When you use the first form, the subject of the inner clause is linked to the
