--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -1212,25 +1212,29 @@ else to engage in the action or experience the state.
 
 ### Modifiers
 
-When a modifier acts as a noun, it means an uncountable quality and/or degree of
-being a given state. Like the affix "-ness" in English. One way of making a noun
-out of a modifier is to provide it as the nucleus of a verb or a preposition
-phrase. Verbs and preposition particles always take the word is immediately
-following it as a noun derivation of that word and it is the nucleus of the
-preposition phrase (as long as it's a content word, other prepositions can cause
-argument to be skipped).
+A modifier cannot act directly as a noun. It must be preceded by the abstract
+non particle <HisyeoWord is='kon'/>. When doing so, it means an uncountable
+quality and/or degree of being a given state. Like the affix "-ness" in English.
+Despite this, you can still use a modifier as the nucleus of a verb or a
+preposition phrase and when doing so, it's usually for a verb or preposition
+where an adjective is thematically meaningful. Sometimes, an adjective that
+exists as the nucleus of a noun phrase may be considered to be an impersonal
+pronoun with the word as dependent modifier. Be careful not to misuse the direct
+object slot for adverbial modifiers.
 
 <HisyeoTabs>
-  <p>wôlik nêlô kôs kûyô&emsp;<em>"Black clouds cause sadness."</em></p>
+  <p>wôlik nêlô kôs kon kûyô&emsp;<em>"Black clouds cause sadness."</em></p>
+  <p>noyo li xowosê.&emsp;<em>"I am happy"</em></p>
+  <p>nîo wêîlun xôn.&emsp;<em>"He behaved well"</em></p>
+  <p>nîo dêko hûnsik&emsp;<em>"They saw red"</em></p>
+  <p>nîo li nô bi fîkî&emsp;<em>"She moves fast"</em></p>
 </HisyeoTabs>
 
 Just like with verbs you can create a genitive phrase by preceding the modifier
-with the <HisyeoWord is='yê'/> particle. This particle means that the modifier
-word that immediately following it is taken as the noun derivation of that word.
-
-This is especially useful for the typical reason that genitive phrases are
-useful: it allows you to describe a quality with some modifiers of its own. One
-of the most common usages is when adding a degree to a modifier:
+with the <HisyeoWord is='yê'/> particle. This is useful for the typical reason
+that genitive phrases are useful: it allows you to describe a quality with some
+modifiers of its own. One of the most common usages is when adding a degree to a
+modifier:
 
 <HisyeoTabs>
   <p>tôxûtsi bûmî yê iwotê êto&emsp;<em>"very tall mountain"</em></p>
@@ -1238,8 +1242,9 @@ of the most common usages is when adding a degree to a modifier:
 
 Since Hîsyêô has less than 900 words, using genitive phrases with modifiers
 allows you to create more complex phrases that would require several sentences
-to formulate otherwise. In fact, modifiers can also be used with <HisyeoWord is='kon'/>, <HisyeoWord is='ônî'/>,
-and <HisyeoWord is='foko'/> to make modifier-based abstract and agentive nouns.
+to formulate otherwise. In fact, modifiers can also be used with <HisyeoWord is='ônî'/> to
+make explicit impersonal pronouns (if using a bare modifier would be ambiguous) and
+with  <HisyeoWord is='foko'/> to make causative agents of that modifier.
 
 <HisyeoTabs>
     <p>foko lîûlê yê ênkômôn longi et kûyô&emsp;<em>"a sad clown"</em></p>
